@@ -1,27 +1,35 @@
 package 回溯;
 import java.util.*;
 public class No_77组合 {
-    private List<List<Integer>> res;
+    private List<List<Integer>> list;
+    private int n;
+    private int k;
 
     public List<List<Integer>> combine(int n, int k) {
-        res = new ArrayList<>();
+        list = new ArrayList<>();
         if (n < k || n == 0 || k == 0) {
-            return res;
+            return list;
         }
 
-        List<Integer> pre = new ArrayList<>();
-        backtrack(n, k, 1, pre);
-        return res;
+        this.n = n;
+        this.k = k;
+        Deque<Integer> path = new LinkedList<>();
+
+        dfs(1, path);
+
+        return list;
     }
 
-    private void backtrack(int n, int k, int begin, List<Integer> pre) {
-        if (pre.size() == k) {
-            res.add(new ArrayList<>(pre));
+    private void dfs(int begin, Deque<Integer> path) {
+        if (path.size() == k) {
+            list.add(new ArrayList<>(path));
+            return;
         }
+
         for (int i = begin; i <= n; i++) {
-            pre.add(i);
-            backtrack(n, k, i + 1, pre);
-            pre.remove(pre.size() - 1);
+            path.addLast(i);
+            dfs(i + 1, path);
+            path.removeLast();
         }
     }
 }
